<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minesweeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="game">Game</string>
    <string name="stat">Statistics</string>
    <string name="exit">Exit</string>
    <string name="title_activity_create_new_game">CreateNewGameActivity</string>
    <string name="classic">Classic</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_new_classic_game">NewClassicGameActivity</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="custom">Custom</string>
    <string name="title_activity_classic_game">ClassicGameActivity</string>
    <string name="resume_button_text">Game paused\nClick to resume</string>
    <string name="back">Back</string>
    <string name="win_message">You Win!</string>
    <string name="lose_message">You Lose!</string>
    <string name="new_custom_game">New Custom Game</string>
    <string name="custom_width">Width:&#160;</string>
    <string name="custom_height">Height:&#160;</string>
    <string name="custom_mine_no">Number of mines:&#160;</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>   
    <string name="continue_last_game">Continue last game&#8230;</string>
    <string name="stat_1">You played&#160;</string>   
    <string name="stat_2">&#160;times\nAnd won&#160;</string>
    <string name="stat_3">&#160;times</string>
    <string name="stat_4">\nYour best time is&#160;</string>
    <string name="stat_5">s</string>   
    <string name="help">Help</string>
    <string name="loading">Loading...</string>
    
</resources>
